@@ -6,6 +6,7 @@ AUX jinja-2.7-docs.patch 1945 SHA256 d3299aff0ed48f0b89a7ad07ba092b02696fb85692d
 DIST Jinja2-2.6.tar.gz 389741 SHA256 a85e185375db75c109f99ecde3d55415f035e7068a82252cf4f16c667ac38f49 SHA512 6603bd6a7e4956433746da15b18b1206b67c901262337aab8352ddff154efca9eb6d652c244c63e8ffad492d204c724db3e86222ae371e75e3f5f2011244554e WHIRLPOOL d6d27867a6d4d9f82e956d5d116faae4adfb5f1fea4ecc067fec61d67eca0d16ee6dc80d8585f34a49a89a2da18c65395a4d615b5723241866ff27e3362f915f
 DIST Jinja2-2.7.1.tar.gz 377813 SHA256 5cc0a087a81dca1c08368482fb7a92fe2bdd8cfbb22bc0fccfe6c85affb04c8b SHA512 c5d4262f6dfec77c74496f0b3afd88a37fc0573133810cfdc29fadbd9d02bb7af10b2a3ddf3075f8b682629cd41a949dcbccb293b84b0aeff9090b0aa9669e02 WHIRLPOOL 73a78917adc5a455dda971fc2e1d9cc005ac3b1a95c2467950206a37a710d6481cc1a26b9e0105b6c5607acaf96af0bee90a3849836969ab70b316c3f0cda132
 DIST Jinja2-2.7.2.tar.gz 378300 SHA256 310a35fbccac3af13ebf927297f871ac656b9da1d248b1fe6765affa71b53235 SHA512 4aec74b87957ae723709eed59fb9ee0d888534888eb63228e9a194f32984a6d219fa92446bd6a1975eb09008f0eb63e997fa86c45bff04f27c375d178349c073 WHIRLPOOL 563abf0a67ade40703b26fbf47c491672fb5e567224e20853997a41dfe2babc90c84bf47fc0a88b520d36c8bc935700d852582b1cd4b2db6d64f3886bc1ce6e2
+DIST Jinja2-2.7.3.tar.gz 378470 SHA256 2e24ac5d004db5714976a04ac0e80c6df6e47e98c354cb2c0d82f8879d4f8fdb SHA512 2810db2b52fe800e2a4a47ea41a07f997b1647a2b7ad05fe564f9d554d6a402283c84c4e2491e5dad8d22acd83d3ca420f0983ed2effc732f6d79600a846071b WHIRLPOOL ece9b68dff414739103eac202b5903d96802939f5742a2bf3ff421d87ef49043ed9a4b2a3a6bf0c2f3d9be0d8295b73c47b253553731b44912cb58add8f233c0
 DIST Jinja2-2.7.tar.gz 377603 SHA256 474f1518d189ae7e318b139fecc1d30b943f124448cfa0f09582ca23e069fa4d SHA512 44d0c18babcdb84160eeea077ec6dbd63bc4669ee81b0f5849bc42a9d9665b3e6647ce64ea2e15f04940807a67f25ebcf937da217318dea3d3dc1531800422b1 WHIRLPOOL 7978e27b8b97b832ef0ba910569678c8a931593a8fae16b247b8d8e7516f08b80e4086beca00e6890c9a4dd193d3fb87c49dd40ec9e738dbb4b018df6e762b8f
 EBUILD jinja-2.6-r1.ebuild 1820 SHA256 027eba7e50dfd89fdefc77a3eaaade24fb7f866d907febc2a6edfcfc393f64f5 SHA512 169f5cb8b80768a415a8509ffeab74d1782351789f3055de899c196ad2513a2128a20c15eab349811b7a8356d183b958712a8cdd3ce204cc1b5a488ad295d4e2 WHIRLPOOL 7e8571888b56ed74f57316a9df275d0a7216464fd9834b1c628f11b5b5cb674adeeccf02bf1411ca8b6dd517d612160c782d8f6e178a2ed3cacb3955c7ee5a98
 EBUILD jinja-2.6-r100.ebuild 1775 SHA256 57c8c268f0e31b3b7c364a0733c54cece3ccfcd7fdd9a292123d47c5e2bbb86d SHA512 485fe14def555d4f57c1d0072976f051f83fac9082b1b40611d5ea0f4c5f79e9b98adf8a0affddd9a37d3086d8b2740c6988a16b57886942e49c68866fa9fcee WHIRLPOOL 6d96b5f2bf47a1d5dc25fbaba169f763076e6054e77a116b9e8e6ceebbc09ca8c11e000ae2f986bcb32173b185c1d40a21aa9b4532cb25a5b2400d55e204c09c
@@ -13,13 +14,24 @@ EBUILD jinja-2.6-r2.ebuild 1884 SHA256 6fd790052a69e068cf81faa7dfd59d3f1602f4781
 EBUILD jinja-2.6.ebuild 1885 SHA256 ca7229d425db7195fdb936ce819b014664de41a9847face956612288e0e6a9e1 SHA512 88d8513f5132d5877704db80d320b3cf1210b56118d2bca034aa6cb4a5135fdd330cafc3439f357746c721af49d2368c095d6501e63ef14525fab0fc97034e6c WHIRLPOOL f5eb57b60bcc43905da22da49f58aaa6c4f6a23e00322281149d63588ef1d8430bad8b2364b510efa0cee760450d0855464a0a409d8e34b4e2657cb9a49b55c7
 EBUILD jinja-2.7.1.ebuild 1720 SHA256 448c7dd3358e8989531b18a3011fb2d7281f3ddea1b4ed039992bb7bd8ca1a4b SHA512 2657853f7cb07a097d98be2d812a789c5341876c1326ab9c62813011693c86686a9e03d84007753761fcb11af14e28e66a7feac815d99e75d93ad0afa18a4d86 WHIRLPOOL 77e06d548fd67777d34cbeb75272c1657edb8c6f5ea5d4d547ee05bde070833cd6b85cf659c08d20f080120a162a1161e02a21f7c6d5f5e30f475e3a57d8c7e2
 EBUILD jinja-2.7.2.ebuild 1676 SHA256 a1988763b8d101023b825989e1bb225dbb60c8b5fe7dac02c3bcec016b19eb4e SHA512 cee19a13622fe143588b28a41ff41826e6f0e3d89bde369d9465117349376f89c3e1abe57b36b1751d7454ff57c0253fc62ce0e4eef96ade406315430cd4b353 WHIRLPOOL 700bd5d58ae459bec06e02134931c06cf5f0f5a009ddeb9e1de3a8a7e3646ed86b15102e93cf7fc999725caddb2845757bcefb1f9cd2a4836241947367f52b9f
+EBUILD jinja-2.7.3.ebuild 1677 SHA256 87657f471a0d14733eb7f6e986d24442c9b12cec793aa5af8bb09eb6ee95501c SHA512 67fccf07e7505ff13b072e83f470855155e509d7da65771c11e28c7f48d18ac31ba9a58f80023635dbb18e01e598118527da609bc7b415a144f2fc0bc9118f72 WHIRLPOOL 11c7ba9344a910f2bdf52011f88786177e26ace0ea9c7edcd584015dec5c699ff8f53c37ede9f880779c795c115d602bcb3df9c54133cdbfea4cc13df31b2e7c
 EBUILD jinja-2.7.ebuild 1703 SHA256 87a64bf7dcee25930a080e6df317f8947468d480803aafd09ef0a9257180a91c SHA512 bb4dace2018c0f45788555fe86e9a28ae3027acc093983e2e95f5b19bc4b532fca23a57969daa43e2964ff7f5eff3988ba7304182d477a0d510edeeeddb0249b WHIRLPOOL 018c1f2ba38691c35cb8de8b1a656301d5ccbd9616e0f1c9f6f5e83cdcc1ebecad580dcaffab2237973927714208f7381e3a8f54c34f98b69d9de81e7b7758d0
-MISC ChangeLog 17964 SHA256 bef8c278557c1531773104f10bf65a79a99e94742f9712eb0d90daf72a6b359d SHA512 fcf8211d1dec484b3c59a4149965ee06a47319517a2ee6a8ca5cac2e69218246f4b5096a6b6b3590c3e5a5b6295823e773f0c0d91c8a08d9a526717a0ac18e25 WHIRLPOOL bcc1231d2735d33e439383fe44a83e3f3f1bf9fc3757db7560bb304b2426046940c2ebe7418aeae7d24b451c81de39eff6ad08df336cc4780597b43d8159d9c2
+MISC ChangeLog 18106 SHA256 8f34421d1858321b91afa4622641482672e9114afacd9e59ad6ebfd958be9368 SHA512 5c1e7249857b3e9b9b11ae87808af4174b493d566ebd7b048ce5c29253fc338176f591cb4987b0cda96ef4a87238d2593c841dc32e0007ba7a4bba83ac0c7ee8 WHIRLPOOL a1422e4495f383c8e3b18f95008f05b4c673a205b8792acd43ef0802f3d8bf3b7c20ffe4318d3a2762acad32b7e40d48bb96844538c84b62864fe7cde8f07773
 MISC metadata.xml 260 SHA256 bda84a3528019ac7c58b2435d70ad4a5f5c5fa29f0f8643569b4710081c2e555 SHA512 ac8108e6022705d5954c6ea7e504f0fb9dfd618c22d126ea6d22d181f6784dbd504ed705dc995cbd6c444067d43f46acb1cda58481b1c5459e4f9df7f260a81b WHIRLPOOL f6d4bb49f06a00d8ecc5d2e28ebdb80dee4dca9a77ce5d1926b45386301a2c267c943c991375ffdcde1473a8e30073803512a9e2f091e318fe6401d039c4c696
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlN4AZMACgkQso7CE7gHKw0oBwCdEteE18sgIcb2CqedmPmP4ybQ
-SjcAnA9M4GMcpqF1EfFDODDrtk/8yv6g
-=QZvF
+iQIcBAEBCAAGBQJTrF0+AAoJEHy/RO9cNQiDedkQAIL659yBU3a0cpyi8u+PvD5U
+Ow8wWM/7lm8qUlVgj0BCX+OwyiXCNEBYK3rh+J1ptc/aT0inVftsybFTeUbnNOfA
+3bD8TC6leUoYOYdvPvqVtqGlHS92XzuiGQL0SB5YVgTEK3m+vL0m99DFjb8pCkWe
+3EdOY8zTwx5A5FO7nJLk+AVvem7A8/Xv/12kfny9jgvoSvWIfIrDiLfAc/8afOQ1
+Db+d3HEno62GHOz+18RyHdmyYFBsw/NLmqKGjxSvhAgjSTvdclCYKQwvrSRLVey3
+LXFmosuoIh7KeEGHW+uOsAQNV0gX8XdUyf4wRg/Rpydcud28TOEGkMFeJp9yZjnk
+YqAXc5gr/35aCC9Inhy9hTpnbLTjLP627eQoV6XTbATgqOpsa4Nr8VjFkG2bbZIM
+q7xNaiukZVD9zM4SdyH/x+rjSf+ffdHbpX1ouHTZKqSEXyePbL3NH/4K9NT3PPJL
+t2WQJ0XqiBlabBPf640EIPCtohUptuPfsRGpmRZeVbL0Tt7XOkauk8WcI0xi+/o0
+mvAO3KAOPNFJT9A7Yv1A+sMDZ283zYLDIdT0qRol4iluUnMTeGtQtUeAshkFXC76
+5R39xh4wAeQPNxocORcy2E5q7y6UCE9hN0DN4UpJuUgWoMMzBzw8rQ99XerU1ZsT
+2j78KrzyN9L9RIywqZQd
+=SVyk
 -----END PGP SIGNATURE-----
