@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/jinja
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/jinja/ChangeLog,v 1.108 2014/05/18 00:48:27 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/jinja/ChangeLog,v 1.109 2014/06/26 17:49:48 chutzpah Exp $
+
+*jinja-2.7.3 (26 Jun 2014)
+
+  26 Jun 2014; Patrick McLean <chutzpah@gentoo.org> +jinja-2.7.3.ebuild:
+  Version bump, fix for CVE-2014-0012.
 
 *jinja-2.7.2 (18 May 2014)
 
